fixed para spacing

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
   /* paragraph spacing */
 
   p, td {
-    padding-bottom: 1,5em;
+    padding-bottom: 1.5em;
   }
 
   /* SPACING */
@@ -191,11 +191,14 @@
 
   /* BLOG */
 
+  ul {
+    list-style-type: none;
+  }
+
   .tumblr-title {
     font-size: 120%;
     letter-spacing: 0.5em;
     text-decoration: underline;
-    margin-bottom: 5%;
   }
 
   .tumblr-date {
